# Copyright (C) 2017 Yann Pouillon

#
# Makefile for the examples of XMLF90
#

SUBDIRS = cml dom sax wxml xpath

demodir = $(docdir)/Examples
nobase_demo_DATA = \
  cml/example.f90 \
  dom/README \
  dom/big-file.xml \
  dom/data.F90 \
  dom/features.F90 \
  dom/m_psdom.f90 \
  dom/m_pseudo_types.f90 \
  dom/pseudo.F90 \
  dom/pseudo.xml \
  dom/pseudo_dom.F90 \
  dom/test.xml \
  dom/text.F90 \
  sax/README \
  sax/count/README \
  sax/count/big-file.xml \
  sax/count/count.F90 \
  sax/count/m_count.f90 \
  sax/features/README \
  sax/features/example.F90 \
  sax/features/m_handlers.f90 \
  sax/features/test.xml \
  sax/features/xmlcheck.f90 \
  sax/pseudo/README \
  sax/pseudo/m_pseudo.f90 \
  sax/pseudo/m_pseudo_types.f90 \
  sax/pseudo/pseudo.F90 \
  sax/pseudo/pseudo.xml \
  sax/simple/README \
  sax/simple/example.F90 \
  sax/simple/m_handlers.f90 \
  sax/simple/test.xml \
  wxml/C.psf \
  wxml/Fe.psf \
  wxml/README \
  wxml/m_pseudo_utils.f90 \
  wxml/pseudo.f90 \
  wxml/simple.f90 \
  xpath/Ba.xml \
  xpath/README \
  xpath/m_pseudo_types.f90 \
  xpath/pseudo.F90 \
  xpath/pseudo.xml \
  xpath/relative.F90 \
  xpath/text.F90

